tests/ui/unit.stderr
error: unit structs as serialize are not supported
 --> $DIR/unit.rs:7:5
  |
7 |     struct S1;
  |     ^^^^^^^^^^

error: empty tuple structs as serialize are not supported
  --> $DIR/unit.rs:10:5
   |
10 |     struct S3();
   |     ^^^^^^^^^^^^

error: unit structs as deserialize are not supported
  --> $DIR/unit.rs:17:5
   |
17 |     struct S2;
   |     ^^^^^^^^^^

error: empty tuple structs as deserialize are not supported
  --> $DIR/unit.rs:20:5
   |
20 |     struct S4();
   |     ^^^^^^^^^^^^
